<resources>
    <string name="app_name">Set!</string>
    <string name="score">Score</string>
    <string name="time">Temps passé</string>
    <string name="debug">debug</string>
    <string name="button_send">Send</string>



    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="parametres">parametres</string>
    <string name="title_activity_parametre">Parametres</string>
    <string name="ip">192.168.0.0</string>
    <string name="pseudo">monPseudo</string>
    <string name="pseudonyme">pseudonyme</string>
    <string name="adresseIp">adresse ip du serveur</string>
    <string name="preference_file_key">sharedpreferences</string>
    <string name="restart">false</string>

</resources>
