<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TableRow android:layout_weight="0.2"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:measureWithLargestChild="false">
        <TextView
            android:id="@+id/affichage"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:contentDescription="@string/debug"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/parametres"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:contentDescription="@string/parametres"
            android:onClick="pushParameters"
            tools:text="Parametre"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textSize="18sp"
            android:text="Paramètres" />
    </TableRow>

    <TableRow android:layout_weight="1">

        <ImageView
            android:id="@+id/image1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:onClick="selection" />

        <ImageView
            android:id="@+id/image2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:onClick="selection" />

        <ImageView
            android:id="@+id/image3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:onClick="selection" />

        <ImageView
            android:id="@+id/image4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:onClick="selection" />
    </TableRow>

    <TableRow android:layout_weight="1">

        <ImageView
            android:id="@+id/image5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:onClick="selection" />

        <ImageView
            android:id="@+id/image6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:onClick="selection" />

        <ImageView
            android:id="@+id/image7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:onClick="selection" />

        <ImageView
            android:id="@+id/image8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:onClick="selection" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/image9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:onClick="selection" />

        <ImageView
            android:id="@+id/image10"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:onClick="selection" />

        <ImageView
            android:id="@+id/image11"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:onClick="selection" />

        <ImageView
            android:id="@+id/image12"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:onClick="selection" />

    </TableRow>

    <TableRow android:layout_weight="1">

        <ImageView
            android:id="@+id/image13"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:onClick="selection" />

        <ImageView
            android:id="@+id/image14"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:onClick="selection" />

        <ImageView
            android:id="@+id/image15"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:onClick="selection" />

        <TableLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@null">

            <TableRow android:layout_weight="1">
                <TextView android:id="@+id/time"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/time"
                    />
            </TableRow>
            <TableRow android:layout_weight="1">



                <TextView android:id="@+id/score"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/score" />

            </TableRow>

            <TableRow android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:text="Dernier set"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5" />
            </TableRow>

            <TableRow android:layout_weight="30">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:id="@+id/set1" />
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:id="@+id/set2" />
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:id="@+id/set3" />
            </TableRow>

        </TableLayout>



    </TableRow>


</TableLayout>